route and fixed layout bug

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -36,9 +36,9 @@ img {
 }
 
 a {
-    display: inline-block;
+    display: block;
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .wrapper {
